--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:Dr@g0ns1988@localhost:3306/portfolio"
+DATABASE_URL="mysql://root:[yourpassword]@localhost:3306/portfolio"
