--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.4",
     "graphql": "^16.9.0",
-    "next": "14.2.3",
+    "next": "^14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0"
@@ -27,6 +27,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
